--- a/src/sass/layout/_get-in-touch.scss
+++ b/src/sass/layout/_get-in-touch.scss
@@ -53,7 +53,9 @@
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
+  border: none;
 }
+
 .form__list {
   @media screen and (min-width: 768px) {
     display: flex;
